--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,19 @@
 		"benlumia007/backdrop-template-manager": "^1.0",
 		"benlumia007/backdrop-template-view": "^1.0",
 		"benlumia007/backdrop-theme": "^1.0"
+	},
+	"require-dev": {
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+		"wptrt/wpthemereview": "^0.2.1",
+		"php-parallel-lint/php-parallel-lint": "^1.3"
+	},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	},
+	"scripts": {
+		"lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
+		"lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor ."
 	}
 }
