--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,7 @@
 	"autoload": {
 		"psr-4": {
 			"Creativity\\": "app"
-		},
-		"files": [
-			"app/Site/functions-site.php",
-			"app/framework.php",
-			"app/functions-extras.php",
-			"app/functions-scripts.php",
-			"app/functions-setup.php"
-		]
+		}
 	},
 	"require": {
 		"php": ">=7.0",
@@ -37,17 +30,17 @@
 		"benlumia007/backdrop-theme": "^1.0"
 	},
 	"require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
 		"wptrt/wpthemereview": "^0.2.1",
-		"php-parallel-lint/php-parallel-lint": "^1.3"
+		"php-parallel-lint/php-parallel-lint": "^1.2.0"
+	},
+	"scripts": {
+		"lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs -n",
+		"lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor ."
 	},
 	"config": {
 		"allow-plugins": {
 			"dealerdirect/phpcodesniffer-composer-installer": true
 		}
-	},
-	"scripts": {
-		"lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
-		"lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor ."
 	}
 }
