--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
 		"php-parallel-lint/php-parallel-lint": "^1.2.0"
 	},
 	"scripts": {
-		"lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs -n",
+		"lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs .",
 		"lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor ."
 	},
 	"config": {
