--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 	"require": {
 		"php": ">=7.0",
 		"benlumia007/backdrop": "^2.0",
-		"benlumia007/backdrop-customize": "^1.0",
+    "benlumia007/backdrop-customize": "v1.0.0.x-dev",
 		"benlumia007/backdrop-fontawesome": "^1.0",
 		"benlumia007/backdrop-fonts": "^1.0",
 		"benlumia007/backdrop-mix-manifest": "^1.0",
