--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
 	},
 	"require": {
 		"php": ">=7.1",
-		"benlumia007/backdrop": "^1.0",
-		"benlumia007/backdrop-customize": "^1.0",
-		"benlumia007/backdrop-fonts": "1.0",
-		"benlumia007/backdrop-mix-manifest": "^1.0",
-		"benlumia007/backdrop-template-hierarchy": "^1.0",
-		"benlumia007/backdrop-template-manager": "^1.0",
-		"benlumia007/backdrop-template-view": "^1.0",
-		"benlumia007/backdrop-theme": "1.0.x-dev"
+		"backdrop-dev/framework": "1.0",
+		"backdrop-dev/customize": "^1.0",
+		"backdrop-dev/fonts": "1.0",
+		"backdrop-dev/mix": "^1.0",
+		"backdrop-dev/template-hierarchy": "^1.0",
+		"backdrop-dev/template-manager": "^1.0",
+		"backdrop-dev/view": "^1.0",
+		"backdrop-dev/theme": "^1.0"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "*",
