add new requirement for backdrop-dev/languages

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 		"php": ">=7.1",
 		"backdrop-dev/framework": "1.0",
 		"backdrop-dev/customize": "^1.0",
-		"backdrop-dev/fonts": "1.0",
+		"backdrop-dev/fonts": "^1.0",
+		"backdrop-dev/languages": "^1.0",
 		"backdrop-dev/mix": "^1.0",
 		"backdrop-dev/template-hierarchy": "^1.0",
 		"backdrop-dev/template-manager": "^1.0",
