ignore stuff for phpcs

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -61,6 +61,8 @@
 		<exclude name="WordPress.WP.AlternativeFunctions.file_get_contents_file_get_contents"/>
 		<exclude name="WordPress.WP.EnqueuedResourceParameters.MissingVersion"/>
 		<exclude name="WordPress.WP.EnqueuedResourceParameters.NoExplicitVersion"/>
+        <exclude name="WordPress.WP.GlobalVariablesOverride.OverrideProhibited"/>
+
 
 		<!-- Remove Squiz rules in Bulk -->
 		<exclude name="Squiz.Commenting"/>
